force-app/main/default/objects/Company_Specifications__c/fields/CIN__c.field-meta.xml
<CustomField>
    <fullName>CIN__c</fullName>
    <label>CIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>