force-app/main/default/objects/Company_Specifications__c/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <label>PAN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>