force-app/main/default/objects/Company_Specifications__c/fields/SAC__c.field-meta.xml
<CustomField>
    <fullName>SAC__c</fullName>
    <label>SAC</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>